Implementierung eines kleinen Clients: Am Service: Microsoft.Owin.Cors hinzufügen + Cors in der Startup.Owin.cs! ABER ACHTUNG: Aus WebApiConfig muss es dann wieder raus!!!

--- a/20180419_WebApiSchulung/Api.Security.One.Client/Index.html
+++ b/20180419_WebApiSchulung/Api.Security.One.Client/Index.html
@@ -5,6 +5,17 @@
     <title>JWT Bearer Token OAuth 2 Login</title>
 </head>
 <body>
+    <h1>JWT Bearer Token OAuth 2 Login</h1>
+    <form id="userdata">
+        <input type="text" name="UserName" placeholder="Username" />
+        <input type="password" name="Password" placeholder="Passwort" value="" />
+        <input type="submit" id="login" value="Go for it!" />
+    </form>
 
+    <button id="getData">Get Data</button>
+    <div id="output"></div>
+    
+    <script src="Scripts/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="Scripts/app/app.js" type="text/javascript"></script>
 </body>
 </html>
